Updated About Me page and Custom Desk page.

--- a/templates/about.html
+++ b/templates/about.html
@@ -69,13 +69,26 @@
               <div class="row">
                 <div class="col-xs-12 col-md-6">
                   <h3>Summary</h3>
-                  <p>Versatile, naturally curious engineer with three years of professional experience. Graduate of the
+                  <!-- <p>Versatile, naturally curious engineer with three years of professional experience. Graduate of the
                     University of Kansas with a degree in Chemical Engineering. Adept at quickly picking up new skills,
-                    meeting tight deadlines, and producing exceptional results with an attention to detail.</p>
+                    meeting tight deadlines, and producing exceptional results with an attention to detail.</p> -->
+                  <!-- <p>Versatile, naturally curious engineer with three years of professional experience. Optimized data
+                    entry efforts to reduce inefficiencies and streamline product delivery. Utilizing my chemical and
+                    electrical engineering background provides perspective as I develop solutions in Python and C++.</p> -->
+                  <p>I love to build! Whether I’m constructing a custom solid wood desk or building a spider in Python
+                    using the Scrapy framework, I’m always developing a solution.<br><br>
+
+                    As a chemical/electrical engineer shifting to software engineering, I bring a unique perspective.<br><br>
+
+                    I’m drawn to software engineering because there is never a shortage of problems to solve or new
+                    technologies to learn.<br><br>
+
+                    As I dive deeper into the world of software engineering, I’m always looking for new problems to solve
+                    and projects to contribute to.</p>
 
                   <h3>Education</h3>
                   <ul>
-                    <li>Programming Languages:</li>
+                    <li>Languages</li>
                     <div class="row">
                       <div class="col-xs-6">
                         <ul>
@@ -96,26 +109,34 @@
                       </div>
                     </div>
                     <br>
-                    <li>University Of Kansas
+                    <li>University Of Kansas - 2015
                       <ul>
                         <li>Chemical Engineering, B.S.</li>
                       </ul>
                     </li>
-                  </ul>
-
-                  <h3>Interests &amp; Hobbies</h3>
-                  <ul>
-                    <li>Staying active by playing golf, hiking, skiing, and adventuring backcountry</li>
-                    <li>Maintaining a connection to the outdoors by camping with my dogs and friends in the Rocky
-                      Mountains</li>
-                    <li>Learning handyman skills including fixing appliances and improving functionality around the
-                      house</li>
                   </ul>
                 </div>
 
                 <div class="col-xs-12 col-md-6">
                   <img src="./static/assets/images/headshot.jpg" class="img-responsive img-rounded img-centered"
                     alt="Austin Scobee">
+
+                  <h3>Social Networks</h3>
+                  <a href="http://www.linkedin.com/in/austin-scobee" target="_blank" title="LinkedIn"
+                    class="fa-icon logo-linkedin">
+                    <i class="fab fa-linkedin-in fa-2x"></i>
+                  </a>
+                  <a href="http://github.com/ascobee" target="_blank" title="GitHub" class="fa-icon logo-github">
+                    <i class="fab fa-github-alt fa-2x"></i>
+                  </a>
+                  <a href="https://www.instagram.com/ascobee1/" target="_blank" title="Instagram"
+                    class="fa-icon logo-instagram">
+                    <i class="fab fa-instagram fa-2x"></i>
+                  </a>
+                  <a href="https://www.facebook.com/austin.scobee.3" target="_blank" title="Facebook"
+                    class="fa-icon logo-facebook">
+                    <i class="fab fa-facebook-f fa-2x"></i>
+                  </a>
                 </div>
 
               </div>
