--- a/templates/works/customdesk.html
+++ b/templates/works/customdesk.html
@@ -77,22 +77,13 @@
             <div class="text-center">
               <h1 class="h2">007 : Custom Desk</h1>
             </div>
-            <p>Play the classic phone game "Snake" right in the terminal. The snake never stops moving and grows as it
-              eats apples. Quickly navigate to avoid walls and eating your own tail!
-            </p>
-            <a href="https://github.com/ascobee/snake-game-cli" target="_blank" title="GitHub"
-              class="btn-download">View/Download</a>
+            <p>I built this custom solid wood desk to fit in a little nook in our guest room where a standard
+              desk wouldn't fit. The back of the desk easily detaches from the wall and the front legs fold
+              in for storage. The initial concept started as a simple sketch on a piece of paper. Building a
+              3D model allowed me to make a detailed evaluation of the design before buying any materials.
+              My partner loves her new workspace by the window!</p>
           </div>
         </div>
-
-        <!-- <div class="col-xs-4">
-          <figure class="text-center">
-            <a href="../static/assets/images/desk/model_1.png" target="_blank" title="Click to enlarge" class="img-btn">
-              <img src="../static/assets/images/desk/model_1.png" class="img-responsive img-rounded img-centered"
-                alt="Desk Model #1">
-            </a>
-          </figure>
-        </div> -->
 
         <div class="col-xs-4">
           <figure class="text-center">
