--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -162,14 +162,14 @@
                   </div>
 
                   <div class="col-sm-4">
-                    <a href="./" title="" class="black-image-project-hover">
+                    <a href="./putting-green.html" title="" class="black-image-project-hover">
                       <img src="../static/assets/images/work02-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>008/009</h4>
-                      <h3>Coming Soon: New Project!</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                      <a href="./" title="" class="btn btn-default">Check it
+                      <h3>Just For Fun: Backyard Putting Green</h3>
+                      <p>I partnered with a friend to design and build a backyard putting green.</p>
+                      <a href="./putting-green.html" title="" class="btn btn-default">Check it
                         out!</a>
                     </div>
                   </div>
