--- a/templates/works/customdesk.html
+++ b/templates/works/customdesk.html
@@ -59,7 +59,7 @@
             <li><a href="./snakegame.html" title="Classic Game: Snake" class="active">005</a></li>
             <li><a href="./" title="Coming Soon: New Project!" class="">006</a></li>
             <li><a href="./customdesk.html" title="Custom Solid Wood Desk" class="active">007</a></li>
-            <li><a href="./" title="Coming Soon: New Project!" class="">008</a></li>
+            <li><a href="./putting-green.html" title="Backyard Putting Green" class="active">008</a></li>
             <li><a href="./" title="Coming Soon: New Project!" class="">009</a></li>
           </ul>
         </div>
@@ -87,6 +87,15 @@
 
         <div class="col-xs-4">
           <figure class="text-center">
+            <a href="../static/assets/images/desk/model_1.png" target="_blank" title="Click to enlarge" class="img-btn">
+              <img src="../static/assets/images/desk/model_1.png" class="img-responsive img-rounded img-centered"
+                alt="Desk Model #1">
+            </a>
+          </figure>
+        </div>
+
+        <div class="col-xs-4">
+          <figure class="text-center">
             <a href="../static/assets/images/desk/model_2.png" target="_blank" title="Click to enlarge" class="img-btn">
               <img src="../static/assets/images/desk/model_2.png" class="img-responsive img-rounded img-centered"
                 alt="Desk Model #2">
@@ -99,15 +108,6 @@
             <a href="../static/assets/images/desk/model_3.png" target="_blank" title="Click to enlarge" class="img-btn">
               <img src="../static/assets/images/desk/model_3.png" class="img-responsive img-rounded img-centered"
                 alt="Desk Model #3">
-            </a>
-          </figure>
-        </div>
-
-        <div class="col-xs-4">
-          <figure class="text-center">
-            <a href="../static/assets/images/desk/model_4.png" target="_blank" title="Click to enlarge" class="img-btn">
-              <img src="../static/assets/images/desk/model_4.png" class="img-responsive img-rounded img-centered"
-                alt="Desk Model #4">
             </a>
           </figure>
         </div>
