--- a/templates/works/passwordchecker.html
+++ b/templates/works/passwordchecker.html
@@ -59,7 +59,7 @@
             <li><a href="./snakegame.html" title="Classic Game: Snake" class="active">005</a></li>
             <li><a href="./" title="Coming Soon: New Project!" class="">006</a></li>
             <li><a href="./customdesk.html" title="Custom Solid Wood Desk" class="active">007</a></li>
-            <li><a href="./" title="Coming Soon: New Project!" class="">008</a></li>
+            <li><a href="./putting-green.html" title="Backyard Putting Green" class="active">008</a></li>
             <li><a href="./" title="Coming Soon: New Project!" class="">009</a></li>
           </ul>
         </div>
