--- a/templates/works/putting-green.html
+++ b/templates/works/putting-green.html
@@ -13,8 +13,8 @@
   </script>
 
   <meta charset="UTF-8">
-  <meta name="description" content="Fully functioning REST API built using the Django REST framework.">
-  <meta name="keywords" content="REST, API, Django, python">
+  <meta name="description" content="I designed and built a backyard putting green with a friend.">
+  <meta name="keywords" content="putting, green, engineering">
   <meta name="author" content="Austin Scobee">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -23,7 +23,7 @@
   <link href="../static/favicon.ico" rel="icon">
   <link href="../static/main.3f6952e4.css" rel="stylesheet">
 
-  <title>Backend REST API | Austin Scobee</title>
+  <title>Backyard Putting Green | Austin Scobee</title>
 </head>
 
 <body class="">
@@ -75,37 +75,69 @@
           <img src="../static/assets/images/work001-01.jpg" class="img-responsive" alt="">
           <div class="card-container">
             <div class="text-center">
-              <h1 class="h2">006 : Backend REST API</h1>
+              <h1 class="h2">008 : Backyard Putting Green</h1>
             </div>
-            <p>Working in Python, I was able to create a password checker that has become a useful tool for myself and
-              could be to others when trying to avoid being a target in a data breach. This uses the Pwned Passwords API
-              to find out how many times a particular password has been leaked. This simple script could be useful for
-              any user.
-            </p>
-            <a href="https://github.com/ascobee/recipe-app-api" target="_blank" title="GitHub"
-              class="btn-download">View/Download</a>
+            <p>I partnered with a friend and fellow engineer to design and build a backyard putting green.
+              Having no prior landscaping experience, we set out to create a 350 sq. ft. artificial grass
+              putting green with 4 holes and two designated chipping areas. Research and planning were
+              critical to creating a realistic putting surface that could withstand the harsh Colorado climate.</p>
           </div>
         </div>
 
-        <div class="col-xs-12">
+        <div class="col-xs-4">
           <figure class="text-center">
-            <a href="../static/assets/images/passwordcheckerterminal.png" target="_blank" title="Click to enlarge"
-              class="img-btn">
-              <img src="../static/assets/images/passwordcheckerterminal.png"
-                class="img-responsive img-rounded img-centered" alt="Password Checker Terminal">
+            <a href="../static/assets/images/puttinggreen/PG_1.jpg" target="_blank" title="Click to enlarge" class="img-btn">
+              <img src="../static/assets/images/puttinggreen/PG_1.jpg" class="img-responsive img-rounded img-centered"
+                alt="Putting Green #1">
             </a>
-            <p>Password Checker Terminal</p>
           </figure>
         </div>
 
-        <div class="col-xs-12">
+        <div class="col-xs-4">
           <figure class="text-center">
-            <a href="../static/assets/images/passwordcheckerscript.png" target="_blank" title="Click to enlarge"
-              class="img-btn">
-              <img src="../static/assets/images/passwordcheckerscript.png"
-                class="img-responsive img-rounded img-centered" alt="Password Checker Script">
+            <a href="../static/assets/images/puttinggreen/PG_2.jpg" target="_blank" title="Click to enlarge" class="img-btn">
+              <img src="../static/assets/images/puttinggreen/PG_2.jpg" class="img-responsive img-rounded img-centered"
+                alt="Putting Green #2">
             </a>
-            <p>Password Checker Script</p>
+          </figure>
+        </div>
+
+        <div class="col-xs-4">
+          <figure class="text-center">
+            <a href="../static/assets/images/puttinggreen/PG_3.jpg" target="_blank" title="Click to enlarge" class="img-btn">
+              <img src="../static/assets/images/puttinggreen/PG_3.jpg" class="img-responsive img-rounded img-centered"
+                alt="Putting Green #3">
+            </a>
+          </figure>
+        </div>
+
+        <div class="col-xs-4">
+          <figure class="text-center">
+            <a href="../static/assets/images/puttinggreen/PG_4.jpg" target="_blank" title="Click to enlarge"
+              class="img-btn">
+              <img src="../static/assets/images/puttinggreen/PG_4.jpg" class="img-responsive img-rounded img-centered"
+                alt="Putting Green #4">
+            </a>
+          </figure>
+        </div>
+
+        <div class="col-xs-4">
+          <figure class="text-center">
+            <a href="../static/assets/images/puttinggreen/PG_5.jpg" target="_blank" title="Click to enlarge"
+              class="img-btn">
+              <img src="../static/assets/images/puttinggreen/PG_5.jpg" class="img-responsive img-rounded img-centered"
+                alt="Putting Green #5">
+            </a>
+          </figure>
+        </div>
+
+        <div class="col-xs-4">
+          <figure class="text-center">
+            <a href="../static/assets/images/puttinggreen/PG_6.jpg" target="_blank" title="Click to enlarge"
+              class="img-btn">
+              <img src="../static/assets/images/puttinggreen/PG_6.jpg" class="img-responsive img-rounded img-centered"
+                alt="Putting Green #6">
+            </a>
           </figure>
         </div>
 
