New Project: Backend REST API

--- a/templates/works/calculator.html
+++ b/templates/works/calculator.html
@@ -57,7 +57,7 @@
             <li><a href="./omnifood/" target="_blank" title="Website: Omnifood" class="active">003</a></li>
             <li><a href="./calculator.html" title="Convenient Calculator" class="active">004</a></li>
             <li><a href="./snakegame.html" title="Classic Game: Snake" class="active">005</a></li>
-            <li><a href="./" title="Coming Soon: New Project!" class="">006</a></li>
+            <li><a href="./backend-rest-api.html" title="Backend REST API" class="active">006</a></li>
             <li><a href="./customdesk.html" title="Custom Solid Wood Desk" class="active">007</a></li>
             <li><a href="./putting-green.html" title="Backyard Putting Green" class="active">008</a></li>
             <li><a href="./" title="Coming Soon: New Project!" class="">009</a></li>
