--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -79,7 +79,7 @@
                       <h4>001/009</h4>
                       <h3>Password Checker</h3>
                       <p>Have any of your passwords been exposed in a data breach?</p>
-                      <a href="./passwordchecker.html" title="" class="btn btn-default">Find out now!</a>
+                      <a href="./passwordchecker.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
@@ -91,8 +91,7 @@
                       <h4>002/009</h4>
                       <h3>Hacker News: Top Stories</h3>
                       <p>Just the highlights. Get a list of the top stories from Hacker News.</p>
-                      <a href="./topstories.html" title="" class="btn btn-default">Check it
-                        out!</a>
+                      <a href="./topstories.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
@@ -104,8 +103,7 @@
                       <h4>003/009</h4>
                       <h3>Website: Omnifood</h3>
                       <p>A premium website for a (fictional) premium food delivery service.</p>
-                      <a href="./omnifood/" target="_blank" title="" class="btn btn-default">Check
-                        it out!</a>
+                      <a href="./omnifood/" target="_blank" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
@@ -117,8 +115,7 @@
                       <h4>004/009</h4>
                       <h3>Convenient Calculator</h3>
                       <p>This handy calculator can perform addition, subtraction, exponents, and more.</p>
-                      <a href="./calculator.html" title="" class="btn btn-default">Check it
-                        out!</a>
+                      <a href="./calculator.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
@@ -130,21 +127,19 @@
                       <h4>005/009</h4>
                       <h3>Classic Game: Snake</h3>
                       <p>Set a new high score in the classic phone game "Snake" right in the terminal.</p>
-                      <a href="./snakegame.html" title="" class="btn btn-default">Check it
-                        out!</a>
+                      <a href="./snakegame.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
                   <div class="col-sm-4">
-                    <a href="./" title="" class="black-image-project-hover">
+                    <a href="./backend-rest-api.html" title="" class="black-image-project-hover">
                       <img src="../static/assets/images/work03-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>006/009</h4>
-                      <h3>Coming Soon: New Project!</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                      <a href="./" title="" class="btn btn-default">Check it
-                        out!</a>
+                      <h3>Backend REST API</h3>
+                      <p>I built a fully functioning REST API using the Django REST framework.</p>
+                      <a href="./backend-rest-api.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
@@ -156,8 +151,7 @@
                       <h4>007/009</h4>
                       <h3>Just For Fun: Custom Solid Wood Desk</h3>
                       <p>A standard desk would never fit, so I designed and built one that would.</p>
-                      <a href="./customdesk.html" title="" class="btn btn-default">Check it
-                        out!</a>
+                      <a href="./customdesk.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
@@ -169,8 +163,7 @@
                       <h4>008/009</h4>
                       <h3>Just For Fun: Backyard Putting Green</h3>
                       <p>I partnered with a friend to design and build a backyard putting green.</p>
-                      <a href="./putting-green.html" title="" class="btn btn-default">Check it
-                        out!</a>
+                      <a href="./putting-green.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
@@ -182,8 +175,7 @@
                       <h4>009/009</h4>
                       <h3>Coming Soon: New Project!</h3>
                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                      <a href="./" title="" class="btn btn-default">Check it
-                        out!</a>
+                      <a href="./" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
