--- a/templates/works/backend-rest-api.html
+++ b/templates/works/backend-rest-api.html
@@ -57,7 +57,7 @@
             <li><a href="./omnifood/" target="_blank" title="Website: Omnifood" class="active">003</a></li>
             <li><a href="./calculator.html" title="Convenient Calculator" class="active">004</a></li>
             <li><a href="./snakegame.html" title="Classic Game: Snake" class="active">005</a></li>
-            <li><a href="./" title="Coming Soon: New Project!" class="">006</a></li>
+            <li><a href="./backend-rest-api.html" title="Backend REST API" class="active">006</a></li>
             <li><a href="./customdesk.html" title="Custom Solid Wood Desk" class="active">007</a></li>
             <li><a href="./putting-green.html" title="Backyard Putting Green" class="active">008</a></li>
             <li><a href="./" title="Coming Soon: New Project!" class="">009</a></li>
@@ -77,17 +77,15 @@
             <div class="text-center">
               <h1 class="h2">006 : Backend REST API</h1>
             </div>
-            <p>Working in Python, I was able to create a password checker that has become a useful tool for myself and
-              could be to others when trying to avoid being a target in a data breach. This uses the Pwned Passwords API
-              to find out how many times a particular password has been leaked. This simple script could be useful for
-              any user.
+            <p>Using Python, Docker and PostgreSQL, I was able to create a backend REST API for a fictional cooking recipe website.
+              After signing in, users can manage their accounts, recipes, images, and more!
             </p>
             <a href="https://github.com/ascobee/recipe-app-api" target="_blank" title="GitHub"
               class="btn-download">View/Download</a>
           </div>
         </div>
 
-        <div class="col-xs-12">
+        <!-- <div class="col-xs-12">
           <figure class="text-center">
             <a href="../static/assets/images/passwordcheckerterminal.png" target="_blank" title="Click to enlarge"
               class="img-btn">
@@ -107,7 +105,7 @@
             </a>
             <p>Password Checker Script</p>
           </figure>
-        </div>
+        </div> -->
 
       </div>
     </div>
