--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -174,7 +174,7 @@
                     <div class="card-container card-container-lg">
                       <h4>009/009</h4>
                       <h3>Coming Soon: New Project!</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                      <p>I'm always working on projects. Come back soon to see my latest work.</p>
                       <a href="./" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
