--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -175,7 +175,7 @@
                       <h4>009/009</h4>
                       <h3>Coming Soon: New Project!</h3>
                       <p>I'm always working on projects. Come back soon to see my latest work.</p>
-                      <a href="./" title="" class="btn btn-default">Check it out!</a>
+                      <!-- <a href="./" title="" class="btn btn-default">Check it out!</a> -->
                     </div>
                   </div>
 
