Added a new project and updated resume

--- a/templates/works/backend-rest-api.html
+++ b/templates/works/backend-rest-api.html
@@ -48,7 +48,7 @@
             <li><a href="./">Works</a></li>
             <li><a href="../about.html">About</a></li>
             <li><a href="../contact.html">Contact</a></li>
-            <li><a href="../austin-scobee-resume-2020.pdf" target="_blank" title="View/Download">Resume</a></li>
+            <li><a href="../austin-scobee-resume-2021.pdf" target="_blank" title="View/Download">Resume</a></li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
@@ -60,7 +60,8 @@
             <li><a href="./backend-rest-api.html" title="Backend REST API" class="active">006</a></li>
             <li><a href="./customdesk.html" title="Custom Solid Wood Desk" class="active">007</a></li>
             <li><a href="./putting-green.html" title="Backyard Putting Green" class="active">008</a></li>
-            <li><a href="./" title="Coming Soon: New Project!" class="">009</a></li>
+            <li><a href="./cryptobot.html" title="Crypto Trading Bot" class="active">009</a></li>
+            <!-- <li><a href="./" title="Coming Soon: New Project!" class="">009</a></li> -->
           </ul>
         </div>
 
