--- a/templates/works/cryptobot.html
+++ b/templates/works/cryptobot.html
@@ -13,8 +13,8 @@
   </script>
 
   <meta charset="UTF-8">
-  <meta name="description" content="This handy calculator can perform addition, subtraction, exponents, and more.">
-  <meta name="keywords" content="calculator, python">
+  <meta name="description" content="Crypto trading bot with market predictions using machine learning.">
+  <meta name="keywords" content="crypto, machine learning, python">
   <meta name="author" content="Austin Scobee">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -23,7 +23,7 @@
   <link href="../static/favicon.ico" rel="icon">
   <link href="../static/main.3f6952e4.css" rel="stylesheet">
 
-  <title>Convenient Calculator | Austin Scobee</title>
+  <title>Cryptobot | Austin Scobee</title>
 </head>
 
 <body class="">
@@ -76,26 +76,41 @@
           <img src="../static/assets/images/work001-01.jpg" class="img-responsive" alt="">
           <div class="card-container">
             <div class="text-center">
-              <h1 class="h2">004 : Convenient Calculator</h1>
+              <h1 class="h2">009 : Crypto Trading Bot</h1>
             </div>
-            <p>Using the Tkinter package for Python, I built a gaphical user interface calculator capable of performing
-              basic math operations.
+            <p>Cryptobot is a Python project that I'm currently obsessed with. This user-friendly interface
+              allows you to research, monitor, and trade cryptocurrencies through your Robinhood account.
+              I'm adding new features and functionality from a growing list of ideas weekly. Some of the
+              existing features include: execute new market/limit orders, view or cancel existing orders,
+              and produce graphs of historical data. I'm currently working on the next prominent feature:
+              market predictions using machine learning.
             </p>
-            <a href="https://github.com/ascobee/convenient-calculator" target="_blank" title="GitHub"
+            <a href="https://github.com/ascobee/cryptobot" target="_blank" title="GitHub"
               class="btn-download">View/Download</a>
           </div>
         </div>
 
-        <div class="col-xs-12">
+        <!-- <div class="col-xs-12">
           <figure class="text-center">
-            <a href="../static/assets/images/calculatorinterface.png" target="_blank" title="Click to enlarge"
+            <a href="../static/assets/images/passwordcheckerterminal.png" target="_blank" title="Click to enlarge"
               class="img-btn">
-              <img src="../static/assets/images/calculatorinterface.png" class="img-responsive img-rounded img-centered"
-                alt="Calculator Interface">
+              <img src="../static/assets/images/passwordcheckerterminal.png"
+                class="img-responsive img-rounded img-centered" alt="Password Checker Terminal">
             </a>
-            <p>Calculator Interface</p>
+            <p>Password Checker Terminal</p>
           </figure>
-        </div>
+        </div> -->
+
+        <!-- <div class="col-xs-12">
+          <figure class="text-center">
+            <a href="../static/assets/images/passwordcheckerscript.png" target="_blank" title="Click to enlarge"
+              class="img-btn">
+              <img src="../static/assets/images/passwordcheckerscript.png"
+                class="img-responsive img-rounded img-centered" alt="Password Checker Script">
+            </a>
+            <p>Password Checker Script</p>
+          </figure>
+        </div> -->
 
       </div>
     </div>
