--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -48,7 +48,7 @@
             <li><a href="./">Works</a></li>
             <li><a href="../about.html">About</a></li>
             <li><a href="../contact.html">Contact</a></li>
-            <li><a href="../austin-scobee-resume-2020.pdf" target="_blank" title="View/Download">Resume</a></li>
+            <li><a href="../austin-scobee-resume-2021.pdf" target="_blank" title="View/Download">Resume</a></li>
           </ul>
         </div>
 
@@ -173,9 +173,9 @@
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>009/009</h4>
-                      <h3>Coming Soon: New Project!</h3>
-                      <p>I'm always working on projects. Come back soon to see my latest work.</p>
-                      <!-- <a href="./" title="" class="btn btn-default">Check it out!</a> -->
+                      <h3>Crypto Trading Bot</h3>
+                      <p>Crypto trading bot with market predictions using machine learning.</p>
+                      <a href="./cryptobot.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
