--- a/templates/works/index.html
+++ b/templates/works/index.html
@@ -72,38 +72,44 @@
               <div class="item active">
                 <div class="row">
                   <div class="col-sm-4">
-                    <a href="./passwordchecker.html" title="" class="black-image-project-hover">
+                    <a href="./cryptobot.html" title="" class="black-image-project-hover">
                       <img src="../static/assets/images/work01-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>001/009</h4>
-                      <h3>Password Checker</h3>
-                      <p>Have any of your passwords been exposed in a data breach?</p>
-                      <a href="./passwordchecker.html" title="" class="btn btn-default">Check it out!</a>
+                      <a href="./cryptobot.html">
+                        <h3>Crypto Trading Bot</h3>
+                      </a>
+                      <p>Crypto trading bot with market predictions using machine learning.</p>
+                      <a href="./cryptobot.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
                   <div class="col-sm-4">
-                    <a href="./topstories.html" title="" class="black-image-project-hover">
+                    <a href="./backend-rest-api.html" title="" class="black-image-project-hover">
                       <img src="../static/assets/images/work02-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>002/009</h4>
-                      <h3>Hacker News: Top Stories</h3>
-                      <p>Just the highlights. Get a list of the top stories from Hacker News.</p>
-                      <a href="./topstories.html" title="" class="btn btn-default">Check it out!</a>
+                      <a href="./backend-rest-api.html">
+                        <h3>Backend REST API</h3>
+                      </a>
+                      <p>I built a fully functioning REST API using the Django REST framework.</p>
+                      <a href="./backend-rest-api.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
                   <div class="col-sm-4">
-                    <a href="./omnifood/" target="_blank" title="" class="black-image-project-hover">
+                    <a href="./passwordchecker.html" title="" class="black-image-project-hover">
                       <img src="../static/assets/images/work03-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>003/009</h4>
-                      <h3>Website: Omnifood</h3>
-                      <p>A premium website for a (fictional) premium food delivery service.</p>
-                      <a href="./omnifood/" target="_blank" title="" class="btn btn-default">Check it out!</a>
+                      <a href="./passwordchecker.html">
+                        <h3>Password Checker</h3>
+                      </a>
+                      <p>Have any of your passwords been exposed in a data breach?</p>
+                      <a href="./passwordchecker.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
@@ -113,7 +119,9 @@
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>004/009</h4>
-                      <h3>Convenient Calculator</h3>
+                      <a href="./calculator.html">
+                        <h3>Convenient Calculator</h3>
+                      </a>
                       <p>This handy calculator can perform addition, subtraction, exponents, and more.</p>
                       <a href="./calculator.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
@@ -125,33 +133,39 @@
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>005/009</h4>
-                      <h3>Classic Game: Snake</h3>
+                      <a href="./snakegame.html">
+                        <h3>Classic Game: Snake</h3>
+                      </a>
                       <p>Set a new high score in the classic phone game "Snake" right in the terminal.</p>
                       <a href="./snakegame.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
                   <div class="col-sm-4">
-                    <a href="./backend-rest-api.html" title="" class="black-image-project-hover">
+                    <a href="./topstories.html" title="" class="black-image-project-hover">
                       <img src="../static/assets/images/work03-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>006/009</h4>
-                      <h3>Backend REST API</h3>
-                      <p>I built a fully functioning REST API using the Django REST framework.</p>
-                      <a href="./backend-rest-api.html" title="" class="btn btn-default">Check it out!</a>
+                      <a href="./topstories.html">
+                        <h3>Hacker News: Top Stories</h3>
+                      </a>
+                      <p>Just the highlights. Get a list of the top stories from Hacker News.</p>
+                      <a href="./topstories.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
                   <div class="col-sm-4">
-                    <a href="./customdesk.html" title="" class="black-image-project-hover">
+                    <a href="./omnifood/" target="_blank" title="" class="black-image-project-hover">
                       <img src="../static/assets/images/work01-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>007/009</h4>
-                      <h3>Just For Fun: Custom Solid Wood Desk</h3>
-                      <p>A standard desk would never fit, so I designed and built one that would.</p>
-                      <a href="./customdesk.html" title="" class="btn btn-default">Check it out!</a>
+                      <a href="./omnifood/" target="_blank">
+                        <h3>Omnifood: Premium Food Delivery</h3>
+                      </a>
+                      <p>A premium website for a (fictional) premium food delivery service.</p>
+                      <a href="./omnifood/" target="_blank" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
@@ -161,21 +175,25 @@
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>008/009</h4>
-                      <h3>Just For Fun: Backyard Putting Green</h3>
+                      <a href="./putting-green.html">
+                        <h3>Just For Fun: Backyard Putting Green</h3>
+                      </a>
                       <p>I partnered with a friend to design and build a backyard putting green.</p>
                       <a href="./putting-green.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
                   <div class="col-sm-4">
-                    <a href="./" title="" class="black-image-project-hover">
+                    <a href="./customdesk.html" title="" class="black-image-project-hover">
                       <img src="../static/assets/images/work03-hover.jpg" alt="" class="img-responsive img-rounded">
                     </a>
                     <div class="card-container card-container-lg">
                       <h4>009/009</h4>
-                      <h3>Crypto Trading Bot</h3>
-                      <p>Crypto trading bot with market predictions using machine learning.</p>
-                      <a href="./cryptobot.html" title="" class="btn btn-default">Check it out!</a>
+                      <a href="./customdesk.html">
+                        <h3>Just For Fun: Custom Solid Wood Desk</h3>
+                      </a>
+                      <p>A standard desk would never fit, so I designed and built one that would.</p>
+                      <a href="./customdesk.html" title="" class="btn btn-default">Check it out!</a>
                     </div>
                   </div>
 
