Added new photo to cryptobot project

--- a/templates/works/cryptobot.html
+++ b/templates/works/cryptobot.html
@@ -90,16 +90,16 @@
           </div>
         </div>
 
-        <!-- <div class="col-xs-12">
+        <div class="col-xs-12">
           <figure class="text-center">
-            <a href="../static/assets/images/passwordcheckerterminal.png" target="_blank" title="Click to enlarge"
+            <a href="../static/assets/images/cryptobotterminal.jpeg" target="_blank" title="Click to enlarge"
               class="img-btn">
-              <img src="../static/assets/images/passwordcheckerterminal.png"
-                class="img-responsive img-rounded img-centered" alt="Password Checker Terminal">
+              <img src="../static/assets/images/cryptobotterminal.jpeg"
+                class="img-responsive img-rounded img-centered" alt="Cryptobot Terminal">
             </a>
-            <p>Password Checker Terminal</p>
+            <p>Cryptobot Terminal</p>
           </figure>
-        </div> -->
+        </div>
 
         <!-- <div class="col-xs-12">
           <figure class="text-center">
